--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -50,10 +50,6 @@
     "about": "تمكين التعليم من خلال أدوات وموارد الذكاء الاصطناعي. اكتشف مستقبل التعلم مع مجموعتنا المختارة.",
     "navigation": "روابط سريعة",
     "support": "الدعم",
-    "newsletter": "النشرة البريدية",
-    "newsletterDescription": "اشترك للحصول على آخر الأخبار والتحديثات حول أدوات الذكاء الاصطناعي في التعليم",
-    "emailPlaceholder": "أدخل بريدك الإلكتروني",
-    "subscribe": "اشترك",
     "madeWith": "صنع بـ",
     "inEgypt": "في مصر",
     "allRightsReserved": "جميع الحقوق محفوظة",
@@ -84,13 +80,7 @@
     "title": "هل أنت مستعد لتحويل تجربة التعلم الخاصة بك؟",
     "subtitle": "انضم إلى آلاف الطلاب والمعلمين الذين يستخدمون بالفعل أدوات الذكاء الاصطناعي لتعزيز رحلتهم التعليمية.",
     "exploreTools": "استكشف الأدوات",
-    "submitTool": "أضف أداة",
-    "newsletter": {
-      "title": "اشترك في نشرتنا الإخبارية",
-      "description": "احصل على أحدث أدوات ودلائل الذكاء الاصطناعي التعليمية في بريدك الإلكتروني.",
-      "placeholder": "بريدك الإلكتروني",
-      "subscribe": "اشترك"
-    }
+    "submitTool": "أضف أداة"
   },
   "about": {
     "title": "devora_tools",
@@ -169,13 +159,6 @@
   "terms": {
     "title": "شروط الاستخدام",
     "lastUpdated": "آخر تحديث"
-  },
-  "newsletter": {
-    "emailRequired": "البريد الإلكتروني مطلوب",
-    "subscribeSuccess": "تم الاشتراك بنجاح في النشرة البريدية!",
-    "subscribeError": "حدث خطأ أثناء الاشتراك. الرجاء المحاولة مرة أخرى.",
-    "emailPlaceholder": "أدخل بريدك الإلكتروني",
-    "subscribe": "اشترك"
   },
   "pricing": {
     "Free": "مجاني",
